fix: fixed display on mobiles

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,4 @@
 $violet: #000;
 $yellow: #F9C802;
 $gradient: linear-gradient(50.09deg, #D4145A 4.38%, #FBB03B 85.8%);
+$mobile: 650px;
